--- a/style.css
+++ b/style.css
@@ -1,22 +1,41 @@
-div {
-  transition: background-color 800ms;
-}
-div:hover {
-  background-color: rgba(0, 0, 0, 0.5);
-}
-button {
-  animation: float 2000ms infinite alternate-reverse;
-}
-button:hover {
-  background-color: black;
-  color: white;
+* {
+  box-sizing: border-box;
 }
 
-@keyframes float {
-  0% {
-    transform:translateY(0);
-  }
-  100% {
-    transform:translateY(10px);
-  }
+.container {
+  border: 4px solid lightgray;
+  padding: 24px 24px 0 24px;
+}
+.row{
+  width: 100%;
+  max-width: 600px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+.box {
+  border: 4px solid lightgray;
+  margin-bottom: 24px;
+}
+
+.box-small{
+  height: 50px;
+}
+
+.box-wrapper {
+  border: 1px solid lightblue;
+  width: 45%
+}
+.box-tiny{
+  width: 30%;
+  height: 50px;
+}
+
+.tiny-wrapper{
+  justify-content: space-between;
+  display: flex;
+}
+
+.box-large {
+  width: 45%;
 }
